--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@
       </div>
    </header>
 
+   <main>
+      <section id="resume">
+      </section>
+
+      <section id="projects">
+      </section>
+
+      <section id="blog">
+      </section>
+
+      <section id="contacts">
+      </section>
+   </main>
 
    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
