--- a/index.html
+++ b/index.html
@@ -21,27 +21,27 @@
          <p id="page-descr">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
          <nav id="main-menu">
             <ul>
-               <li><a href="">
+               <li><a id="btnResume">
                   <ion-icon name="person-outline"></ion-icon>
                   <span>Resume</span>
                </a></li>
-               <li><a href="">
+               <li><a id="btnProjects">
                   <ion-icon name="code-slash-outline"></ion-icon>
                   <span>Projects</span>
                </a></li>
-               <li><a href="">
+               <li><a href="https://github.com/dmytrokorobko" target="_blank">
                   <ion-icon name="logo-github"></ion-icon>
                   <span>GitHub</span>
                </a></li>
-               <li><a href="">
+               <li><a href="https://www.linkedin.com/in/dmytrokorobko/" target="_blank">
                   <ion-icon name="logo-linkedin"></ion-icon>
                   <span>LinkedIn</span>
                </a></li>
-               <li><a href="">
+               <li><a id="btnBlog">
                   <ion-icon name="school-outline"></ion-icon>
                   <span>Blog</span>
                </a></li>               
-               <li><a href="">
+               <li><a id="btnContacts">
                   <ion-icon name="at-outline"></ion-icon>
                   <span>Contacts</span>
                </a></li>
@@ -52,15 +52,125 @@
 
    <main>
       <section id="resume">
+         <h2>Resume</h2>
+         <p>I have a strong passion for collaborating with others to create internet-based projects. I find joy in various forms of programming, whether it's working as a team in group coding or pair programming, or even tackling projects independently.</p>
+         <p>Consistently, I've maintained my skillset by staying abreast of the latest developments, fueled by a deep personal fascination with programming, system networking, and security. This drive is reinforced by collaborating with talented individuals and participating in specialized security courses and conferences.</p>
+         <p>I derive immense satisfaction from collaborating with others to create and witness the fruition of our joint efforts. Whether it's through group coding, pair programming, or working independently, I relish the process of bringing ideas to life and seeing the final result.</p>
+         <br><br>
+         <h2>Skills</h2>
+         <h3>Programming</h3>         
+         <p>I have experience developing web applications mostly with JavaScript.</p>
+         <ul>
+            <li><strong>JavaScript.</strong></li>
+            <li><strong>Templating.</strong> HTML, CSS</li>
+         </ul>
+         <br>
+         <p>In the past, I excelled in Android mobile app development, creating projects that gained popularity on the Play Store for several years. However, due to a prolonged hiatus from coding, I regrettably lost touch with these skills. Nevertheless, I'm eager to rekindle my expertise through dedicated learning and hands-on practice.</p>
+         <br><br>
+         <h2>Training and Certifications</h2>
+         <p><strong>2024</strong></p>
+         <ul>
+            <li>Codecademy - Full stack Web Developer Engineer - in process...</li>
+         </ul>
+         <br><br>
+         <h2>Education</h2>
+         <p>Kryvyi Rih Technical University, Ukraine, 2008 - Bachelor in Computer Science</p>
+         <br><br>
       </section>
 
       <section id="projects">
+         <h2>Projects</h2>
+         <p><strong>Message Generator</strong> Challenge Project (JavaScript)</p>
+         <p>Applying algorithms in projects, use git and Github for version control</p>
+         <br>
+         <a href="https://github.com/dmytrokorobko/messageGenerator" target="_blank">Github project</a>
+         <br>
+         <hr>
+         <br><br>
+
+         <p><strong>Mysterious Organism</strong> Challenge Project (JavaScript)</p>
+         <p>Applying algorithms in projects</p>
+         <br>
+         <a href="https://github.com/dmytrokorobko/mysteriousOrganism/blob/main/main.js" target="_blank">Github project</a>
+         <br>
+         <hr>
+         <br><br>
+
+         <p><strong>Credit Card Checker</strong> Challenge Project (JavaScript)</p>
+         <p>Applying algorithms in projects</p>
+         <br>
+         <a href="https://github.com/dmytrokorobko/cardchecker/blob/main/main.js" target="_blank">Github project</a>
+         <br>
+         <hr>
+         <br><br>
+
+         <p><strong>Soccer Club</strong> Responsive project</p>
+         <p>Usage of responsice patterns to show content on different screens with different sizes and resolutions. Design, structure and content was created by author. </p>
+         <br>
+         <a href="https://dmytrokorobko.github.io/soccerclub/" target="_blank">Live version</a>
+         <br>
+         <hr>
+         <br><br>
+
+         <p><strong>Fake Coffee Shop</strong> CSS Flex and Grid project</p>
+         <p>Confident knowledge in Flex and Grid on Web pages. Design, structure and content was created by author. </p>
+         <br>
+         <a href="https://dmytrokorobko.github.io/companyhomepage/" target="_blank">Live version</a>
+         <br>
+         <hr>
+         <br><br>
+
+         <p><strong>Tea Cozy</strong> CSS Flex project</p>
+         <p>First attempt to use Flex on Web pages. Design was provided by codecademy. The task was to recreate pixel to pixel</p>
+         <br>
+         <a href="https://dmytrokorobko.github.io/theteacozy/" target="_blank">Live version</a>
+         <br>
+         <hr>
+         <br><br>
+
+         <p><strong>Website Style Guide</strong> project</p>
+         <p>Applying colors, fonts and sizes on web pages</p>
+         <br>
+         <a href="https://dmytrokorobko.github.io/styleguide/" target="_blank">Live version</a>
+         <br>
+         <hr>
+         <br><br>
+
+         <p><strong>Cheat Sheet</strong> project</p>
+         <p>First challenge project from Codecademy</p>
+         <br>
+         <a href="https://dmytrokorobko.github.io/htmlcss/" target="_blank">Live version</a>
+         <hr>
+         <br><br>
       </section>
 
       <section id="blog">
+         <h2>Blog</h2>
+         <p>I will complete this page once I finish the back-end portion of the Codecademy course. I see no need to write anything directly in the raw HTML file until then.</p>
       </section>
 
       <section id="contacts">
+         <h2>Contact Form</h2>
+         <p>If you have any questions or wish to discuss an interesting task, please feel free to reach out to me either via LinkedIn or using the form below. I'll strive to respond as promptly as possible, taking into account the day and time. Thank you.</p>
+         <div class="form">
+            <form action="index.html">
+               <label for="username">Name*</label>
+               <input type="text" id="username" name="username" placeholder="Bobby Smith" required minlength="3" maxlength="15">
+               <label for="email">Email*</label>
+               <input type="text" id="email" name="email" placeholder="bobby@gmail.com" required pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$">
+               <label for="topic">Topic*</label>
+               <input type="text" list="topic-list" id="topic" name="topic" required>
+               <datalist id="topic-list">
+                  <option value="JavaScript"></option>
+                  <option value="Web Dev"></option>
+                  <option value="Hiking"></option>
+               </datalist>
+               <label for="message">Message*</label>
+               <textarea name="message" id="message" cols="40" rows="8" minlength="10" maxlength="1000" required></textarea>
+               <span>(<span id="message-count">1000 </span>symbols left)</span>
+               <input id="submit" type="submit">
+            </form>
+         </div>
       </section>
    </main>
 
