--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="/Styles/fonts.css">
-   <link rel="stylesheet" href="/Styles/style.css">
+   <link rel="stylesheet" href="./Styles/fonts.css">
+   <link rel="stylesheet" href="./Styles/style.css">
    <script src="script.js" defer></script>
    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
    <title>Dmytro Korobko - Portfolio Web Page</title>
