Completed project ver 1

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                   <ion-icon name="code-slash-outline"></ion-icon>
                   <span>Projects</span>
                </a></li>
+               <li><a id="btnBlog">
+                  <ion-icon name="school-outline"></ion-icon>
+                  <span>Blog</span>
+               </a></li>           
                <li><a href="https://github.com/dmytrokorobko" target="_blank">
                   <ion-icon name="logo-github"></ion-icon>
                   <span>GitHub</span>
@@ -36,11 +40,7 @@
                <li><a href="https://www.linkedin.com/in/dmytrokorobko/" target="_blank">
                   <ion-icon name="logo-linkedin"></ion-icon>
                   <span>LinkedIn</span>
-               </a></li>
-               <li><a id="btnBlog">
-                  <ion-icon name="school-outline"></ion-icon>
-                  <span>Blog</span>
-               </a></li>               
+               </a></li>                   
                <li><a id="btnContacts">
                   <ion-icon name="at-outline"></ion-icon>
                   <span>Contacts</span>
@@ -54,12 +54,16 @@
       <section id="resume">
          <h2>Resume</h2>
          <p>I have a strong passion for collaborating with others to create internet-based projects. I find joy in various forms of programming, whether it's working as a team in group coding or pair programming, or even tackling projects independently.</p>
+         <br>
          <p>Consistently, I've maintained my skillset by staying abreast of the latest developments, fueled by a deep personal fascination with programming, system networking, and security. This drive is reinforced by collaborating with talented individuals and participating in specialized security courses and conferences.</p>
+         <br>
          <p>I derive immense satisfaction from collaborating with others to create and witness the fruition of our joint efforts. Whether it's through group coding, pair programming, or working independently, I relish the process of bringing ideas to life and seeing the final result.</p>
          <br><br>
          <h2>Skills</h2>
          <h3>Programming</h3>         
+         <br>
          <p>I have experience developing web applications mostly with JavaScript.</p>
+         <br>
          <ul>
             <li><strong>JavaScript.</strong></li>
             <li><strong>Templating.</strong> HTML, CSS</li>
@@ -69,6 +73,7 @@
          <br><br>
          <h2>Training and Certifications</h2>
          <p><strong>2024</strong></p>
+         <br>
          <ul>
             <li>Codecademy - Full stack Web Developer Engineer - in process...</li>
          </ul>
@@ -80,68 +85,63 @@
 
       <section id="projects">
          <h2>Projects</h2>
-         <p><strong>Message Generator</strong> Challenge Project (JavaScript)</p>
-         <p>Applying algorithms in projects, use git and Github for version control</p>
-         <br>
-         <a href="https://github.com/dmytrokorobko/messageGenerator" target="_blank">Github project</a>
-         <br>
-         <hr>
-         <br><br>
+         <div class="grid-container">
+            <div class="item item-large">
+               <p><strong>Message Generator</strong> Challenge Project (JavaScript)</p>
+               <p>Applying algorithms in projects, use git and Github for version control</p>
+               <br>
+               <a href="https://github.com/dmytrokorobko/messageGenerator" target="_blank">Github project</a>
+            </div>
 
-         <p><strong>Mysterious Organism</strong> Challenge Project (JavaScript)</p>
-         <p>Applying algorithms in projects</p>
-         <br>
-         <a href="https://github.com/dmytrokorobko/mysteriousOrganism/blob/main/main.js" target="_blank">Github project</a>
-         <br>
-         <hr>
-         <br><br>
+            <div class="item">
+               <p><strong>Mysterious Organism</strong> Challenge Project (JavaScript)</p>
+               <p>Applying algorithms in projects</p>
+               <br>
+               <a href="https://github.com/dmytrokorobko/mysteriousOrganism/blob/main/main.js" target="_blank">Github project</a>
+            </div>
 
-         <p><strong>Credit Card Checker</strong> Challenge Project (JavaScript)</p>
-         <p>Applying algorithms in projects</p>
-         <br>
-         <a href="https://github.com/dmytrokorobko/cardchecker/blob/main/main.js" target="_blank">Github project</a>
-         <br>
-         <hr>
-         <br><br>
+            <div class="item">
+               <p><strong>Credit Card Checker</strong> Challenge Project (JavaScript)</p>
+               <p>Applying algorithms in projects</p>
+               <br>
+               <a href="https://github.com/dmytrokorobko/cardchecker/blob/main/main.js" target="_blank">Github project</a>
+            </div>
 
-         <p><strong>Soccer Club</strong> Responsive project</p>
-         <p>Usage of responsice patterns to show content on different screens with different sizes and resolutions. Design, structure and content was created by author. </p>
-         <br>
-         <a href="https://dmytrokorobko.github.io/soccerclub/" target="_blank">Live version</a>
-         <br>
-         <hr>
-         <br><br>
+            <div class="item">
+               <p><strong>Soccer Club</strong> Responsive project</p>
+               <p>Usage of responsice patterns to show content on different screens with different sizes and resolutions. Design, structure and content was created by author. </p>
+               <br>
+               <a href="https://dmytrokorobko.github.io/soccerclub/" target="_blank">Live version</a>
+            </div>
 
-         <p><strong>Fake Coffee Shop</strong> CSS Flex and Grid project</p>
-         <p>Confident knowledge in Flex and Grid on Web pages. Design, structure and content was created by author. </p>
-         <br>
-         <a href="https://dmytrokorobko.github.io/companyhomepage/" target="_blank">Live version</a>
-         <br>
-         <hr>
-         <br><br>
+            <div class="item">
+               <p><strong>Fake Coffee Shop</strong> CSS Flex and Grid project</p>
+               <p>Confident knowledge in Flex and Grid on Web pages. Design, structure and content was created by author. </p>
+               <br>
+               <a href="https://dmytrokorobko.github.io/companyhomepage/" target="_blank">Live version</a>
+            </div>
 
-         <p><strong>Tea Cozy</strong> CSS Flex project</p>
-         <p>First attempt to use Flex on Web pages. Design was provided by codecademy. The task was to recreate pixel to pixel</p>
-         <br>
-         <a href="https://dmytrokorobko.github.io/theteacozy/" target="_blank">Live version</a>
-         <br>
-         <hr>
-         <br><br>
+            <div class="item">
+               <p><strong>Tea Cozy</strong> CSS Flex project</p>
+               <p>First attempt to use Flex on Web pages. Design was provided by codecademy. The task was to recreate pixel to pixel</p>
+               <br>
+               <a href="https://dmytrokorobko.github.io/theteacozy/" target="_blank">Live version</a>
+            </div>
 
-         <p><strong>Website Style Guide</strong> project</p>
-         <p>Applying colors, fonts and sizes on web pages</p>
-         <br>
-         <a href="https://dmytrokorobko.github.io/styleguide/" target="_blank">Live version</a>
-         <br>
-         <hr>
-         <br><br>
+            <div class="item">
+               <p><strong>Website Style Guide</strong> project</p>
+               <p>Applying colors, fonts and sizes on web pages</p>
+               <br>
+               <a href="https://dmytrokorobko.github.io/styleguide/" target="_blank">Live version</a>
+            </div>
 
-         <p><strong>Cheat Sheet</strong> project</p>
-         <p>First challenge project from Codecademy</p>
-         <br>
-         <a href="https://dmytrokorobko.github.io/htmlcss/" target="_blank">Live version</a>
-         <hr>
-         <br><br>
+            <div class="item">
+               <p><strong>Cheat Sheet</strong> project</p>
+               <p>First challenge project from Codecademy</p>
+               <br>
+               <a href="https://dmytrokorobko.github.io/htmlcss/" target="_blank">Live version</a>
+            </div>
+         </div>
       </section>
 
       <section id="blog">
@@ -151,13 +151,13 @@
 
       <section id="contacts">
          <h2>Contact Form</h2>
-         <p>If you have any questions or wish to discuss an interesting task, please feel free to reach out to me either via LinkedIn or using the form below. I'll strive to respond as promptly as possible, taking into account the day and time. Thank you.</p>
+         <p>If you have any questions or wish to discuss an interesting task, please feel free to reach out to me using the form below. I'll strive to respond as promptly as possible, taking into account the day and time. Thank you.</p>
          <div class="form">
-            <form action="index.html">
+            <form onsubmit="event.preventDefault(); sendForm();" >
                <label for="username">Name*</label>
                <input type="text" id="username" name="username" placeholder="Bobby Smith" required minlength="3" maxlength="15">
                <label for="email">Email*</label>
-               <input type="text" id="email" name="email" placeholder="bobby@gmail.com" required pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$">
+               <input type="email" id="email" name="email" placeholder="bobby@gmail.com" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
                <label for="topic">Topic*</label>
                <input type="text" list="topic-list" id="topic" name="topic" required>
                <datalist id="topic-list">
@@ -167,7 +167,7 @@
                </datalist>
                <label for="message">Message*</label>
                <textarea name="message" id="message" cols="40" rows="8" minlength="10" maxlength="1000" required></textarea>
-               <span>(<span id="message-count">1000 </span>symbols left)</span>
+               <span>(<span id="message-count">1000</span> symbols left)</span>
                <input id="submit" type="submit">
             </form>
          </div>
