Fixed bugs. Added pictures to projects section

--- a/index.html
+++ b/index.html
@@ -86,14 +86,16 @@
       <section id="projects">
          <h2>Projects</h2>
          <div class="grid-container">
-            <div class="item item-large">
+            <div class="item">
+               <img src="./Images/no_image.png" alt="Message Generator">
                <p><strong>Message Generator</strong> Challenge Project (JavaScript)</p>
-               <p>Applying algorithms in projects, use git and Github for version control</p>
+               <p>Applying algorithms in projects, using Git and GitHub for version control.</p>
                <br>
                <a href="https://github.com/dmytrokorobko/messageGenerator" target="_blank">Github project</a>
             </div>
 
             <div class="item">
+               <img src="./Images/no_image.png" alt="Mysterious Organism">
                <p><strong>Mysterious Organism</strong> Challenge Project (JavaScript)</p>
                <p>Applying algorithms in projects</p>
                <br>
@@ -101,6 +103,7 @@
             </div>
 
             <div class="item">
+               <img src="./Images/no_image.png" alt="Credit Card Checker">
                <p><strong>Credit Card Checker</strong> Challenge Project (JavaScript)</p>
                <p>Applying algorithms in projects</p>
                <br>
@@ -108,34 +111,39 @@
             </div>
 
             <div class="item">
+               <img src="./Images/soccer-club.png" alt="Soccer Club">
                <p><strong>Soccer Club</strong> Responsive project</p>
-               <p>Usage of responsice patterns to show content on different screens with different sizes and resolutions. Design, structure and content was created by author. </p>
+               <p>The usage of responsive patterns to display content on screens with various sizes and resolutions. The design, structure, and content were created by the author.</p>
                <br>
                <a href="https://dmytrokorobko.github.io/soccerclub/" target="_blank">Live version</a>
             </div>
 
             <div class="item">
-               <p><strong>Fake Coffee Shop</strong> CSS Flex and Grid project</p>
-               <p>Confident knowledge in Flex and Grid on Web pages. Design, structure and content was created by author. </p>
+               <img src="./Images/fake-coffee-shop.jpg" alt="Fake Coffee Shop">
+               <p><strong>Fake Coffee Shop</strong> CSS Flexbox and Grid project</p>
+               <p>Confident knowledge in Flexbox and Grid for web page layouts. The design, structure, and content were created by the author.</p>
                <br>
                <a href="https://dmytrokorobko.github.io/companyhomepage/" target="_blank">Live version</a>
             </div>
 
             <div class="item">
-               <p><strong>Tea Cozy</strong> CSS Flex project</p>
-               <p>First attempt to use Flex on Web pages. Design was provided by codecademy. The task was to recreate pixel to pixel</p>
+               <img src="./Images/tea-cozy.png" alt="Tea Cozy">
+               <p><strong>Tea Cozy</strong> CSS Flexbox project</p>
+               <p>My first attempt to use Flexbox on web pages. The design was provided by Codecademy, and the task was to recreate it pixel by pixel.</p>
                <br>
                <a href="https://dmytrokorobko.github.io/theteacozy/" target="_blank">Live version</a>
             </div>
 
             <div class="item">
+               <img src="./Images/website-style-guide.png" alt="Website Style Guide">
                <p><strong>Website Style Guide</strong> project</p>
-               <p>Applying colors, fonts and sizes on web pages</p>
+               <p>Applying colors, fonts and sizes to web pages</p>
                <br>
                <a href="https://dmytrokorobko.github.io/styleguide/" target="_blank">Live version</a>
             </div>
 
             <div class="item">
+               <img src="./Images/cheat-sheet.png" alt="Cheat Sheet">
                <p><strong>Cheat Sheet</strong> project</p>
                <p>First challenge project from Codecademy</p>
                <br>
